# django-blog-project

./: db.sqlite3  pyproject.toml
django_blog/: settings.py  urls.py  views.py
