[tool.poetry]
name = "blog on django"
version = "0.1.0"
description = "school project"
authors = ["Alina N <silumain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
